--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-testing Github Pages
+---
+layout: default
+title: Cap'n Proto for Rust
+---
+
+<h1>testing Github Pages</h1>
+
+<div id="home">
+<ul class="posts">
+{% for post in site.posts %}
+<li>{{post.date | date_to_string}} &raquo; <a href="{{post.url}}">{{post.title}}</a></li>
+{% endfor %}
+</ul>
+</div>
