--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Cap'n Proto for Rust
 <div id="home">
 <ul class="posts">
 {% for post in site.posts %}
-<li>{{post.date | date_to_string}} &raquo; <a href="{{post.url}}">{{site.baseurl}}{{post.title}}</a></li>
+<li>{{post.date | date_to_string}} &raquo; <a href="{{site.baseurl}}{{post.url}}">{{post.title}}</a></li>
 {% endfor %}
 </ul>
 </div>
