--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@ layout: default
 title: Cap'n Proto for Rust
 ---
 
-<h1>testing Github Pages</h1>
+<h1>
+ <a href="https://www.github.com/dwrensha/capnproto-rust">
+Cap'n Proto for Rust
+</a>
+</h1>
 
 <div id="home">
 <ul class="posts">
 {% for post in site.posts %}
-<li>{{post.date | date_to_string}} &raquo; <a href="{{site.baseurl}}{{post.url}}">{{post.title}}</a></li>
+<li>{{post.date | date_to_string}} : <a href="{{site.baseurl}}{{post.url}}">{{post.title}}</a></li>
 {% endfor %}
 </ul>
 </div>
