--- a/index.html
+++ b/index.html
@@ -16,3 +16,10 @@ Cap'n Proto for Rust
 {% endfor %}
 </ul>
 </div>
+
+<a href="http://feeds.feedburner.com/CapnProtoForRust">
+<img src="{{site.baseurl}}/assets/rss.png"
+     width="14"/>
+</a>
+
+
