--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Cap'n Proto for Rust
 </ul>
 </div>
 
-<a href="http://feeds.feedburner.com/CapnProtoForRust">
+<a href="{{site.baseurl}}/feed.xml">
 <img src="{{site.baseurl}}/assets/rss.png"
      width="14"/>
 </a>
