link to documentation on rust-ci

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@ Cap'n Proto for Rust
 </a>
 </h1>
 
+<div>
+ <a href="http://rust-ci.org/dwrensha/capnp-rpc-rust/doc/capnp/index.html">
+Documentation
+</a>
+</div>
+
 <div id="home">
 <ul class="posts">
 {% for post in site.posts %}
